[gd_scene load_steps=9 format=3 uid="uid://ctb0726g6tcmt"]

[ext_resource type="Texture2D" uid="uid://c7ubjsq6xyblw" path="res://art/playerGrey_up1.png" id="1_lmhfr"]
[ext_resource type="Script" path="res://player.gd" id="1_m0olf"]
[ext_resource type="Texture2D" uid="uid://dkcflwj3pmh" path="res://art/playerGrey_up2.png" id="2_ajh2x"]
[ext_resource type="PackedScene" uid="uid://c7f0j0cmkenb" path="res://scenes/bullet.tscn" id="2_wfle1"]
[ext_resource type="Texture2D" uid="uid://cdqwha2hv8d4b" path="res://art/playerGrey_walk1.png" id="3_eqiem"]
[ext_resource type="Texture2D" uid="uid://du2ahsdhs3jaf" path="res://art/playerGrey_walk2.png" id="4_qq0h1"]

[sub_resource type="SpriteFrames" id="SpriteFrames_tdwe4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_lmhfr")
}, {
"duration": 1.0,
"texture": ExtResource("2_ajh2x")
}],
"loop": true,
"name": &"up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_eqiem")
}, {
"duration": 1.0,
"texture": ExtResource("4_qq0h1")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_wphao"]
radius = 27.0
height = 68.0

[node name="Player" type="Area2D"]
position = Vector2(1, 3)
script = ExtResource("1_m0olf")
bullet_scene = ExtResource("2_wfle1")
metadata/_edit_group_ = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_tdwe4")
animation = &"up"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_wphao")

[node name="ShootTimer" type="Timer" parent="."]

[node name="AbilityCooldownTimer" type="Timer" parent="."]
wait_time = 20.0
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
